# Eko-event-talks-app

./: README.md  pyproject.toml
commands/vertex/: analyze_data_driven_optimize_results.toml  create_prompt.toml  delete_prompt.toml  generate_html_report.toml  list_prompts.toml  read_prompt.toml  run_data_driven_optimize.toml  run_few_shot_prompt_optimization.toml  update_prompt.toml  write_data_driven_optimize_config.toml
